--- a/sampleExtension/popup.html
+++ b/sampleExtension/popup.html
@@ -8,26 +8,23 @@
         font-size: 100%;
       }
       #status {
-        /* avoid an excessively wide status text */
         white-space: pre;
         text-overflow: ellipsis;
         overflow: hidden;
         max-width: 400px;
       }
+      
     </style>
 
-    <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
-     -->
     <script src="./popup_files/popup.js"></script><style type="text/css"></style>
   </head>
+
   <body>
-    <div id="status"></div>
-    <img id="image-result" hidden="">
-  
+
+    <a id="changeLink" href="#" onclick="changeURL()"> Change URL</a>
+    <!--div id="status"></div>
+    <img id="image-result" src="icon.png"-->
+  </body>
 
 
-</body></html>
+</html>
