Completed URL Changer: Chrome Extension

--- a/sampleExtension/popup.html
+++ b/sampleExtension/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<!-- saved from url=(0080)https://developer.chrome.com/extensions/examples/tutorials/getstarted/popup.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Getting Started Extension's Popup</title>
     <style>
       body {
@@ -13,18 +14,12 @@
         overflow: hidden;
         max-width: 400px;
       }
-      
     </style>
-
-    <script src="./popup_files/popup.js"></script><style type="text/css"></style>
   </head>
-
   <body>
-
     <a id="changeLink" href="#" onclick="changeURL()"> Change URL</a>
     <!--div id="status"></div>
     <img id="image-result" src="icon.png"-->
   </body>
-
-
+  <script src="./popup_files/popup.js"></script><style type="text/css"></style> 
 </html>
